06-Protect-Cloud-Metadata-Service-From-Nodes/cloud-metadata-deny.yml
# default deny metadata service policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloud-metadata-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock: # block of ip, Note: it is different from blocking IP
        cidr: 0.0.0.0/0
        except: # except block will block IP addresses
          - 169.254.169.254/32
